125 ==> 331167 - Import images from folder create date based folders from images Exif.
126 ==> 361467 - Indicate (shade?) drop target when copying or moving images.
127 ==> 388011 - Suggested improvement of Drag&Drop images from one album to another.
128 ==> 460251 - digiKam git build error.
129 ==> 459027 - Creating large thumbnails issue with digiKam-8.0.0.
130 ==> 460321 - Overlapping faces region.
131 ==> 453840 - digiKam git build error with ffmpeg 5.
132 ==> 402322 - During face detection, the "People" / "Unconfirmed" (or "Unknown") tab content keeps jumping around.
133 ==> 457461 - Ability to ignore all faces except tag marked.
134 ==> 460520 - [FEATURE REQUEST] Ignore rest of not tagged faces in picture.
135 ==> 460568 - Star rating not saved.
136 ==> 460761 - Recent regression Cannot any more reassign faces by dragging them on the left sidebar items.
137 ==> 460786 - Freeze for 3-4 seconds after assigning tag to an image.
138 ==> 446616 - digiKam lags for about 2 - 3 seconds when I assign a Tag.
139 ==> 461069 - Set album date for new albums to earliest picture date.
140 ==> 461065 - When user mouse over tag list which have been cut off (...) on image thumbnail display all tags in mouse over text.
141 ==> 405690 - Album date changing automatically without any reason.
142 ==> 416934 - Tags & data disappear after moving images to new folder.
143 ==> 389655 - Sort multiple albums by exif date (not last modified).
144 ==> 196672 - Add new option to setup global preference about default album dating.
145 ==> 435925 - Cursor in annotations or comments field jumps around while face detection is running.
146 ==> 461228 - Face region is removed when people tag is removed via tag panel.
147 ==> 459157 - Open in a File Manager.
148 ==> 461336 - Exiftool panel metadata values get duplicated when applying changes to file metadata.
149 ==> 461366 - Missing face thumbnails/icons on people are not assigned automatically.
150 ==> 